<resources>
    <string name="app_name">MyApp</string>
    <string name="hello">こんにちは</string>
    <string name="data_filename">data</string>
    <string name="setting">設定</string>
    <string name="help">ヘルプ</string>
    <string name="task">タスク</string>
    <string name="time_table">時間割</string>
    <string name="deadline">期限</string>
    <string name="title">タイトル</string>
    <string name="detail">詳細</string>
    <string name="add">追加</string>
    <string name="edit">編集</string>
    <string name="delete">削除</string>
    <string name="ask_delete">削除しますか</string>
    <string name="ok">確認</string>
    <string name="cancel">キャンセル</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="allDay">終日</string>
    <string name="subject_name">科目名</string>
    <string name="place">場所</string>
    <string name="clear">クリア</string>

    <!-- day of week -->
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>

    <!-- period -->
    <string name="first">1</string>
    <string name="second">2</string>
    <string name="third">3</string>
    <string name="fourth">4</string>
    <string name="fifth">5</string>
    <string name="sixth">6</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>