<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/task_add_main_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:focusable="true"
    tools:focusableInTouchMode="true"
    tools:context=".TaskAddFragment">

    <!--
    <View
        android:id="@+id/dummy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:background="@android:color/transparent"

        android:focusable="true"
        tools:focusable="true"
        tools:focusableInTouchMode="true"/>
    -->

    <EditText
        android:id="@+id/subject_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/subject_name"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="Autofill"
        tools:focusable="true"
        tools:focusableInTouchMode="true"/>

    <EditText
        android:id="@+id/place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/place"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/subject_name"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="Autofill"
        tools:focusable="true"
        tools:focusableInTouchMode="true"/>

    <EditText
        android:id="@+id/detail_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="5"
        android:inputType="textMultiLine"
        android:hint="@string/detail"
        android:textSize="18sp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/place"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="Autofill"/>

</androidx.constraintlayout.widget.ConstraintLayout>