<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimetableFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp">

        <GridLayout
            android:id="@+id/day_of_week_grid_layout"
            android:layout_height="30dp"
            android:layout_width="match_parent"
            android:columnCount="7"
            android:rowCount="1"
            android:background="@color/gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:layout_width="30dp"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_rowWeight="1"/>

            <TextView
                android:text="@string/monday"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:gravity="center" />

            <TextView
                android:text="@string/tuesday"
                android:layout_column="2"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:gravity="center" />

            <TextView
                android:text="@string/wednesday"
                android:layout_column="3"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:gravity="center" />

            <TextView
                android:text="@string/thursday"
                android:layout_column="4"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:gravity="center" />

            <TextView
                android:text="@string/friday"
                android:layout_column="5"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:gravity="center" />

            <View
                android:layout_width="30dp"
                android:layout_column="6"
                android:layout_columnSpan="1"
                android:layout_rowWeight="1"/>

        </GridLayout>

        <GridLayout
            android:id="@+id/table_grid_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:columnCount="5"
            android:rowCount="6"
            app:layout_constraintTop_toBottomOf="@id/day_of_week_grid_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:text="テスト"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_rowSpan="1"
                android:layout_rowWeight="1"
                android:gravity="center"/>

            <TextView
                android:text="テスト"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_rowSpan="1"
                android:layout_rowWeight="1"
                android:gravity="center" />

            <TextView
                android:text="テスト"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_rowSpan="1"
                android:layout_rowWeight="1"
                android:gravity="center" />

            <TextView
                android:text="テスト"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_rowSpan="1"
                android:layout_rowWeight="1"
                android:gravity="center" />


        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>